Some modrinth workaround, improved 1.16 compatibility